# mcp-mercado-publico-cl

./: .gitignore  CLAUDE.md  README.md  install.py
.claude-plugin/: marketplace.json  plugin.json
mcp-mp/: __main__.py  pyproject.toml  run_stdio.py
mcp-mp/application/cotizacion/: use_cases.py
mcp-mp/application/documentos/: use_cases.py
mcp-mp/application/licitacion/: use_cases.py
mcp-mp/application/orden_compra/: use_cases.py
mcp-mp/domain/cotizacion/: entities.py
mcp-mp/domain/documentos/: entities.py
mcp-mp/domain/licitacion/: categories.py  entities.py  repository.py  services.py
mcp-mp/domain/orden_compra/: entities.py  repository.py
mcp-mp/infrastructure/: brand.py  docx_generator.py  excel_generator.py  licitacion_repository.py  mercado_publico_client.py  orden_compra_repository.py  profile.py
mcp-mp/interfaces/mcp/: scraper_tools.py  server.py  tools.py
mcp-mp/tests/: test_buscar_licitaciones_por_nombre.py  test_licitacion_entities.py  test_licitacion_search_service.py  test_licitacion_use_cases.py  test_orden_compra_entities.py  test_orden_compra_use_cases.py  test_repositories_integration.py  test_validaciones.py
openspec/changes/scraping-mercado-publico-docs/: design.md  proposal.md  tasks.md
openspec/changes/scraping-mercado-publico-docs/specs/: tool.md
openspec/specs/configuracion-mcp/: spec.md
openspec/specs/consultar-licitaciones/: spec.md
openspec/specs/consultar-ordenes-compra/: spec.md
scraper/: README.md  pyproject.toml
scraper/src/scraper/: __init__.py  auth.py  browser.py  cli.py  config.py  downloader.py  parser.py  storage.py
(+3 files in other folders)
